KYLIN-1378 add topN UI support

--- a/webapp/app/partials/cubeDesigner/measures.html
+++ b/webapp/app/partials/cubeDesigner/measures.html
@@ -43,7 +43,8 @@
                           <td>
                             <div class="paraTree">
                               <ul>
-                                <parametertree ng-if="measure.function.parameter!=null" nextpara="measure.function.parameter"></parametertree>
+                                <parametertree ng-if="measure.function.parameter!=null && measure.function.expression!=='TOP_N'" nextpara="measure.function.parameter"></parametertree>
+                                <topntree ng-if="measure.function.parameter!=null && measure.function.expression=='TOP_N'" nextpara="measure.function.parameter"></topntree>
                               </ul>
                             </div>
                         <!--<span ng-if="measure.function.parameter.next_parameter!=null">{{measure.function.parameter.next_parameter |json}}</span>-->
@@ -138,7 +139,7 @@
                                       ng-init="newMeasure.function.parameter.value = 1"><b>&nbsp;&nbsp;1</b></span>
                                 <!--!COUNT_DISTINCT-->
                                 <select class="form-control" chosen
-                                        ng-if="newMeasure.function.parameter.type == 'column' && newMeasure.function.expression!=='COUNT_DISTINCT'"
+                                        ng-if="newMeasure.function.parameter.type == 'column' && newMeasure.function.expression!=='COUNT_DISTINCT'&& newMeasure.function.expression!=='TOP_N'"
                                         ng-model="newMeasure.function.parameter.value"
                                         ng-change="measureReturnTypeUpdate();"
                                         ng-options="column as column for column in getCommonMetricColumns()" >
@@ -146,7 +147,7 @@
                                 </select>
                                 <!--COUNT_DISTINCT-->
                                 <select class="form-control" chosen
-                                        ng-if="newMeasure.function.parameter.type == 'column' && newMeasure.function.expression=='COUNT_DISTINCT'"
+                                        ng-if="newMeasure.function.parameter.type == 'column' && (newMeasure.function.expression=='COUNT_DISTINCT' || newMeasure.function.expression=='TOP_N')"
                                         ng-model="newMeasure.function.parameter.value"
                                         ng-change="measureReturnTypeUpdate();"
                                         ng-options="column as column for column in getMetricColumns()" >
@@ -167,8 +168,15 @@
                                       ng-options="ddt.value as ddt.name for ddt in cubeConfig.distinctDataTypes">
                                       <option value=""></option>
                                   </select>
+                                <select class="form-control"
+                                        ng-if="newMeasure.function.expression == 'TOP_N'"
+                                        ng-init="newMeasure.function.returntype = (!!newMeasure.function.returntype)?newMeasure.function.returntype:cubeConfig.dftSelections.topN.value"
+                                        chosen ng-model="newMeasure.function.returntype" required
+                                        ng-options="ddt.value as ddt.name for ddt in cubeConfig.topNTypes">
+                                  <option value=""></option>
+                                </select>
                                   <span class="font-color-default"
-                                        ng-if="newMeasure.function.expression != 'COUNT_DISTINCT'"
+                                        ng-if="newMeasure.function.expression != 'COUNT_DISTINCT' && newMeasure.function.expression != 'TOP_N'"
                                        ><b>&nbsp;&nbsp;{{newMeasure.function.returntype | uppercase}}</b>
                                   </span>
                               </div>
@@ -179,7 +187,7 @@
                         <div class="row">
                           <label class="col-xs-12 col-sm-3 control-label no-padding-right font-color-default"><b></b></label>
                           <div class="col-xs-12 col-sm-6">
-                            <table class="table table-hover table-bordered list" ng-if="nextParameters.length">
+                            <table class="table table-hover table-bordered list" ng-if="nextParameters.length" ng-show="newMeasure.function.expression != 'TOP_N'">
                               <tr>
                                 <th>Type</th>
                                 <th>Value</th>
@@ -199,8 +207,29 @@
 
                               </tr>
                             </table>
-                            <button class="btn btn-sm btn-info" ng-click="addNextParameter()"
+
+                            <table class="table table-hover table-bordered list" ng-if="nextParameters.length" ng-show="newMeasure.function.expression == 'TOP_N'">
+                              <tr ng-repeat="n_parameter in nextParameters track by $index">
+                                <td><b>Order By Column</b></td>
+                                <td>{{n_parameter.value}}</td>
+                                <td>
+                                  <button class="btn btn-xs btn-info" ng-click="editNextParameter(n_parameter)">
+                                    <i class="fa fa-pencil"></i>
+                                  </button>
+                                  <button class="btn btn-xs btn-info" ng-click="removeParameter(nextParameters, $index)"><i class="fa fa-minus"></i>
+                                  </button>
+
+                                </td>
+
+                              </tr>
+                            </table>
+
+
+                            <button class="btn btn-sm btn-info" ng-click="addNextParameter()" ng-show="newMeasure.function.expression != 'TOP_N'"
                                     ng-show="state.mode=='edit'"><i class="fa fa-plus">Parameter</i>
+                            </button>
+                            <button class="btn btn-sm btn-info" ng-click="addNextParameter()" ng-show="newMeasure.function.expression == 'TOP_N' && nextParameters.length==0"
+                                    ng-show="state.mode=='edit'"><i class="fa fa-plus"> Order by Column</i>
                             </button>
                           </div>
                         </div>
@@ -242,7 +271,8 @@
 
 <script type="text/ng-template" id="nextParameter.html">
   <div class="modal-header">
-    <h4 tooltip="submit">Add Parameter</h4>
+    <h4 tooltip="submit" ng-if="newmea.measure&&newmea.measure.function.expression !== 'TOP_N'">Add Parameter</h4>
+    <h4 tooltip="submit" ng-if="newmea.measure&&newmea.measure.function.expression == 'TOP_N'">Select Order By Column</h4>
   </div>
   <div class="modal-body" style="background-color: white">
 
@@ -251,7 +281,7 @@
       <div class="col-md-8">
         <div class="row">
           <div class="form-group">
-            <div class="row">
+            <div class="row" ng-if="newmea.measure&&newmea.measure.function.expression !== 'TOP_N'">
               <label class="col-xs-12 col-sm-3 control-label no-padding-right font-color-default"><b>Param Type</b></label>
               <div class="col-xs-12 col-sm-6">
                 <select class="form-control"
@@ -272,8 +302,9 @@
       <div class="col-md-8">
         <div class="row">
           <div class="form-group">
-            <div class="row">
-              <label class="col-xs-12 col-sm-3 control-label no-padding-right font-color-default"><b>Param Value</b></label>
+
+            <div ng-if="newmea.measure&&newmea.measure.function.expression !== 'TOP_N'" class="row">
+              <label  class="col-xs-12 col-sm-3 control-label no-padding-right font-color-default"><b>Param Value</b></label>
                 <!--COUNT_DISTINCT-->
               <div class="col-xs-12 col-sm-6">
                 <select class="form-control" chosen ng-if="nextPara.type !== 'constant'"
@@ -285,7 +316,21 @@
                      ng-if="nextPara.type == 'constant'"
                      ng-init="nextPara.value = 1"><b>&nbsp;&nbsp;1</b></span>
               </div>
+            </div>
+
+            <div ng-if="newmea.measure&&newmea.measure.function.expression == 'TOP_N'" ng-init="nextPara.type='column'" class="row">
+              <label  class="col-xs-12 col-sm-3 control-label no-padding-right font-color-default"><b>Order By Column</b></label>
+              <!--COUNT_DISTINCT-->
+              <div class="col-xs-12 col-sm-6">
+                <select class="form-control" chosen
+                        ng-model="nextPara.value"
+                        ng-options="column as column for column in getMetricColumns()" >
+                  <option value=""></option>
+                </select>
               </div>
+            </div>
+
+
             </div>
           </div>
         </div>
